--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 20px 20px 0 20px;
+  padding: 25px 20px 5px 20px;
   color: #fff;
   transition: background-color 0.3s ease-in-out;
   margin: 0;
